--- a/views/pages/account.ejs
+++ b/views/pages/account.ejs
@@ -18,7 +18,8 @@
     <% include ../partials/notification %>
     <div class="container-fluid">
         <div class="container border rounded">
-            <h1 id="completed-courses-header">Update Your Completed Courses</h1>
+            <h1 id="completed-courses-header">Save Your Completed Courses*</h1>
+            <h4>Save completed courses to filter search results by fulfilled prerequisites!</h4>
             <span>* Updating your completed courses will overwrite ALL your previously saved completed courses</span>
             <div class="upload border rounded">
                 <h5 class="bold">Upload your unofficial transcript to automatically fill in your courses. You can also manually type in your courses yourself if you do not wish to upload your transcript. Use the template below or it will not be saved properly. </h5>
