added link to register page from login modal

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -46,6 +46,7 @@
                         <button type="submit" class="btn">Log In</button>
                     </form>
                 </div>
+                <a class="reg-link" href="/register">No account? Register here!</a>
             </div>
         </div>
     </div>
