fix login modal css

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -104,6 +104,7 @@
 .reg-link {
     text-align: center;
     color: #0F436D;
+    padding-bottom: 1em;
 }
 .reg-link:visited {
     color: #0F436D;
